vlib/v/checker/tests/struct_field_name_duplicate_err.vv
struct Aaa {
	a int
	a string
}
